masukkan program-program station dalam git yang sama

--- a/ui_src/config.ui
+++ b/ui_src/config.ui
@@ -25,6 +25,10 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="form_src.qrc">
+    <normaloff>:/icon/pcr-icon-on.png</normaloff>:/icon/pcr-icon-on.png</iconset>
+  </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
@@ -49,6 +53,9 @@
    </property>
    <property name="text">
     <string>10.52.129.2</string>
+   </property>
+   <property name="readOnly">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
@@ -286,6 +293,8 @@
    </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="form_src.qrc"/>
+ </resources>
  <connections/>
 </ui>
