--- a/ui_src/reset.ui
+++ b/ui_src/reset.ui
@@ -25,6 +25,10 @@
   <property name="windowTitle">
    <string>Warning</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="form_src.qrc">
+    <normaloff>:/icon/pcr-icon-on.png</normaloff>:/icon/pcr-icon-on.png</iconset>
+  </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
@@ -67,9 +71,9 @@
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>180</y>
+     <y>170</y>
      <width>361</width>
-     <height>101</height>
+     <height>51</height>
     </rect>
    </property>
    <property name="font">
@@ -78,7 +82,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Do you want to reset or power-off the station?</string>
+    <string>Apakah mau me-reset station atau mematikan (shutdown) station?</string>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
@@ -88,7 +92,7 @@
    <property name="geometry">
     <rect>
      <x>450</x>
-     <y>290</y>
+     <y>300</y>
      <width>111</width>
      <height>41</height>
     </rect>
@@ -102,11 +106,11 @@
     <string>Cancel</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pbCancel_2">
+  <widget class="QPushButton" name="pbReset">
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>290</y>
+     <y>300</y>
      <width>111</width>
      <height>41</height>
     </rect>
@@ -120,11 +124,11 @@
     <string>Reset</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pbCancel_3">
+  <widget class="QPushButton" name="pbShutdown">
    <property name="geometry">
     <rect>
      <x>320</x>
-     <y>290</y>
+     <y>300</y>
      <width>111</width>
      <height>41</height>
     </rect>
@@ -135,7 +139,31 @@
     </font>
    </property>
    <property name="text">
-    <string>Power-off</string>
+    <string>Shutdown</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>230</y>
+     <width>381</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>16</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(204, 0, 0);</string>
+   </property>
+   <property name="text">
+    <string>Note: Station yang di-shutdown hanya bisa dinyalakan kembali secara manual!</string>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
