--- a/ui_src/config.ui
+++ b/ui_src/config.ui
@@ -292,6 +292,32 @@
     <string>Cancel</string>
    </property>
   </widget>
+  <widget class="QLineEdit" name="owner">
+   <property name="geometry">
+    <rect>
+     <x>420</x>
+     <y>40</y>
+     <width>361</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Petra Campus Radio</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_10">
+   <property name="geometry">
+    <rect>
+     <x>420</x>
+     <y>20</y>
+     <width>161</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Program Header:</string>
+   </property>
+  </widget>
  </widget>
  <resources>
   <include location="form_src.qrc"/>
