Update beberapa form

--- a/ui_src/about.ui
+++ b/ui_src/about.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Online Community Streaming Radio</string>
+   <string>Informasi Program</string>
   </property>
   <property name="windowIcon">
    <iconset resource="form_src.qrc">
