--- a/ui_src/config.ui
+++ b/ui_src/config.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Konfigurasi</string>
   </property>
   <property name="windowIcon">
    <iconset resource="form_src.qrc">
